--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <style>
     .step-dot { height:8px; width:8px; border-radius:9999px; }
-    /* PRINT: Only the invoice preview (#printable) is printed */
     @media print {
       body * { visibility: hidden !important; }
       #printable, #printable * { visibility: visible !important; }
@@ -99,9 +98,8 @@
       const materialsVal = React.useMemo(()=>clampMoney(materials), [materials]);
       const otherVal = React.useMemo(()=>clampMoney(other), [other]);
 
-      // DRC eligibility requires: within CIS + both VAT-registered + not end user
+      // Logic
       const drcApplies = withinCIS && youVat && customerVat && !endUser;
-      // Charge VAT only if YOU are VAT-registered and DRC does NOT apply
       const chargeVat = youVat && !drcApplies;
 
       const subtotal = labourVal + materialsVal + otherVal;
@@ -149,7 +147,6 @@
         "Waste Removal / Skip","Other…"
       ];
 
-      /* Email invoice helper (respects CIS + VAT logic) */
       const emailInvoice = () => {
         const lines = [];
         const job = (showJobOnInvoice && (jobType==="Other…" ? jobTypeOther.trim() : jobType))
@@ -209,7 +206,6 @@
 
       return (
         <div className="space-y-6">
-          {/* Header */}
           <div className="flex items-start md:items-center justify-between gap-3">
             <div className="flex items-center gap-3">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true">
@@ -229,8 +225,7 @@
             </p>
           </div>
 
-          {/* Step 1 */}
-          {step===1 && (
+          {step===1 ? (
             <div className="bg-white rounded-2xl shadow p-5 grid gap-6 md:grid-cols-2">
               <div className="space-y-2">
                 <label className="font-medium">Are YOU VAT-registered?</label>
@@ -271,10 +266,9 @@
                 <button className="px-4 py-2 rounded-lg bg-blue-600 text-white" onClick={()=>setStep(2)}>Continue</button>
               </div>
             </div>
-          )}
+          ) : null}
 
-          {/* Step 2 */}
-          {step===2 && (
+          {step===2 ? (
             <div className="bg-white rounded-2xl shadow p-5">
               <div className="grid gap-6 md:grid-cols-3">
                 <div className="space-y-2 md:col-span-3">
@@ -299,9 +293,9 @@
                       "Waste Removal / Skip","Other…"
                     ].map((t)=><option key={t} value={t}>{t}</option>)}
                   </select>
-                  {jobType==="Other…" && (
+                  {jobType==="Other…" ? (
                     <input className="border rounded-lg p-2 w-full mt-2" placeholder="Describe the work…" value={jobTypeOther} onChange={(e)=>setJobTypeOther(e.target.value)} />
-                  )}
+                  ) : null}
                 </div>
 
                 <div className="space-y-2">
@@ -345,14 +339,11 @@
                 </div>
               </div>
             </div>
-          )}
+          ) : null}
 
-          {/* Step 3 — Narrow results row (3 mini-cards), then 2 cols below */}
-          {step===3 && (
+          {step===3 ? (
             <div className="space-y-8">
-              {/* ROW 1: Results split across 3 columns */}
               <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
-                {/* Card 1: Key figures */}
                 <div className="bg-white rounded-2xl shadow p-5">
                   <h3 className="font-semibold mb-3">Figures</h3>
                   <div className="space-y-1 text-sm">
@@ -361,12 +352,12 @@
                     <div className="flex justify-between"><span>Other (ex VAT)</span><span>{currency(otherVal)}</span></div>
                     <div className="border-t my-2"></div>
                     <div className="flex justify-between font-medium"><span>Subtotal</span><span>{currency(subtotal)}</span></div>
-                    {chargeVat && (
+                    {chargeVat ? (
                       <div className="flex justify-between"><span>VAT @ 20%</span><span>{currency(vatAmount)}</span></div>
-                    )}
+                    ) : null}
                     <div className="flex justify-between font-semibold"><span>Total to invoice</span><span>{currency(totalToInvoice)}</span></div>
-                    {withinCIS && (
-                      <>
+                    {withinCIS ? (
+                      <div>
                         <div className="border-t my-2"></div>
                         <div className="flex justify-between text-red-600">
                           <span>CIS on labour {cisRate>0?`(${Math.round(cisRate*100)}%)`:"(none)"}</span>
@@ -375,12 +366,11 @@
                         <div className="flex justify-between font-semibold">
                           <span>You’ll receive</span><span>{currency(expectedTakeHome)}</span>
                         </div>
-                      </>
-                    )}
+                      </div>
+                    ) : null}
                   </div>
                 </div>
 
-                {/* Card 2: VAT / DRC note */}
                 <div className="bg-white rounded-2xl shadow p-5">
                   <h3 className="font-semibold mb-3">VAT / DRC</h3>
                   {!withinCIS ? (
@@ -388,31 +378,28 @@
                       <p><span className="font-semibold">Work outside CIS.</span> Reverse charge <b>never</b> applies.</p>
                       <p className="mt-1">{youVat ? "Charge VAT as normal." : "Supplier not VAT-registered — no VAT charged."}</p>
                     </div>
+                  ) : (!youVat ? (
+                    <div className="rounded-xl bg-slate-50 border p-3 text-sm">
+                      <p><span className="font-semibold">Not VAT-registered.</span> No VAT is charged.</p>
+                    </div>
+                  ) : (drcApplies ? (
+                    <div className="rounded-xl bg-amber-50 border p-3 text-sm">
+                      <p><span className="font-semibold">Reverse Charge applies.</span> Do <b>not</b> charge VAT.</p>
+                      <p className="italic mt-1">“Domestic Reverse Charge applies. Customer to account for VAT to HMRC.”</p>
+                      <p className="text-xs text-gray-500 mt-2">Customer’s VAT to account: {currency(drcCustomerVatInfo)}.</p>
+                    </div>
                   ) : (
-                    !youVat ? (
-                      <div className="rounded-xl bg-slate-50 border p-3 text-sm">
-                        <p><span className="font-semibold">Not VAT-registered.</span> No VAT is charged.</p>
-                      </div>
-                    ) : drcApplies ? (
-                      <div className="rounded-xl bg-amber-50 border p-3 text-sm">
-                        <p><span className="font-semibold">Reverse Charge applies.</span> Do <b>not</b> charge VAT.</p>
-                        <p className="italic mt-1">“Domestic Reverse Charge applies. Customer to account for VAT to HMRC.”</p>
-                        <p className="text-xs text-gray-500 mt-2">Customer’s VAT to account: {currency(drcCustomerVatInfo)}.</p>
-                      </div>
-                    ) : (
-                      <div className="rounded-xl bg-emerald-50 border p-3 text-sm">
-                        <p><span className="font-semibold">Charge VAT as normal.</span> Reverse charge does not apply.</p>
-                      </div>
-                    )
-                  )}
+                    <div className="rounded-xl bg-emerald-50 border p-3 text-sm">
+                      <p><span className="font-semibold">Charge VAT as normal.</span> Reverse charge does not apply.</p>
+                    </div>
+                  )))}
                   <ul className="text-xs text-gray-600 mt-3 list-disc pl-5 space-y-1">
                     <li>Keep labour and materials separate.</li>
-                    {withinCIS && <li>Include CIS deduction line.</li>}
-                    <li>Show total {withinCIS && "and expected take-home "}clearly.</li>
+                    {withinCIS ? <li>Include CIS deduction line.</li> : null}
+                    <li>Show total {withinCIS ? "and expected take-home " : ""}clearly.</li>
                   </ul>
                 </div>
 
-                {/* Card 3: Quick actions */}
                 <div className="bg-white rounded-2xl shadow p-5">
                   <h3 className="font-semibold mb-3">Quick actions</h3>
                   <div className="flex flex-wrap gap-2">
@@ -426,9 +413,7 @@
                 </div>
               </div>
 
-              {/* ROW 2: Two columns — inputs (left) & invoice (right) */}
               <div className="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                {/* LEFT: Inputs/editor (not printed) */}
                 <div className="bg-white rounded-2xl shadow p-6">
                   <h2 className="text-lg font-semibold mb-3">Invoice details (live)</h2>
                   <div className="grid md:grid-cols-2 gap-4">
@@ -473,7 +458,6 @@
                   </div>
                 </div>
 
-                {/* RIGHT: Printable invoice */}
                 <div>
                   <div className="bg-white rounded-2xl shadow p-6" id="printable">
                     <h2 className="text-lg font-semibold mb-3">Invoice</h2>
@@ -482,7 +466,7 @@
                       <div className="flex items-start justify-between mb-4">
                         <div>
                           <h3 className="text-lg font-semibold">INVOICE</h3>
-                          {(showJobOnInvoice && (jobType==="Other…" ? jobTypeOther.trim() : jobType)) ? (
+                          {showJobOnInvoice && (jobType==="Other…" ? jobTypeOther.trim() : jobType) ? (
                             <p className="text-xs text-gray-500">{(jobType==="Other…" ? jobTypeOther.trim() : jobType)} works</p>
                           ) : null}
                         </div>
@@ -506,14 +490,10 @@
                           <p>{fromAddr1}</p>
                           <p>{fromAddr2}</p>
                           <p>{fromCity} {fromPost}</p>
-                          {/* Show VAT Reg ONLY if VAT-registered */}
-                          {youVat && (
-                            <p>VAT Reg: {fromVat || "GB…"}</p>
-                          )}
-                          {/* Show CIS Status ONLY if within CIS */}
-                          {withinCIS && (
+                          {youVat ? <p>VAT Reg: {fromVat || "GB…"}</p> : null}
+                          {withinCIS ? (
                             <p>CIS Status: {cisStatus === "gross" ? "Gross (0%)" : cisStatus === "net30" ? "Unverified (30%)" : "Registered (20%)"}</p>
-                          )}
+                          ) : null}
                         </div>
                       </div>
 
@@ -525,34 +505,34 @@
                           </tr>
                         </thead>
                         <tbody>
-                          {labourVal>0 && (
+                          {labourVal>0 ? (
                             <tr className="border-b">
                               <td className="py-2">Labour</td>
                               <td className="text-right py-2">{currency(labourVal)}</td>
                             </tr>
-                          )}
-                          {materialsVal>0 && (
+                          ) : null}
+                          {materialsVal>0 ? (
                             <tr className="border-b">
                               <td className="py-2">Materials & consumables</td>
                               <td className="text-right py-2">{currency(materialsVal)}</td>
                             </tr>
-                          )}
-                          {otherVal>0 && (
+                          ) : null}
+                          {otherVal>0 ? (
                             <tr className="border-b">
                               <td className="py-2">Other charges</td>
                               <td className="text-right py-2">{currency(otherVal)}</td>
                             </tr>
-                          )}
+                          ) : null}
                           <tr className="border-b">
                             <td className="py-2 font-medium">Subtotal</td>
                             <td className="text-right py-2 font-medium">{currency(subtotal)}</td>
                           </tr>
-                          {chargeVat && (
+                          {chargeVat ? (
                             <tr className="border-b">
                               <td className="py-2">VAT @ 20%</td>
                               <td className="text-right py-2">{currency(vatAmount)}</td>
                             </tr>
-                          )}
+                          ) : null}
                           <tr>
                             <td className="py-2 font-semibold">Total to invoice</td>
                             <td className="text-right py-2 font-semibold">{currency(totalToInvoice)}</td>
@@ -573,13 +553,12 @@
                         }
                       </div>
 
-                      {/* CIS summary only if within CIS */}
-                      {withinCIS && (
+                      {withinCIS ? (
                         <div className="mt-4 rounded-xl bg-slate-50 p-3 text-xs">
                           <div className="flex justify-between"><span>CIS deduction on labour {cisRate>0?`(${Math.round(cisRate*100)}%)`:""}</span><span>- {currency(cisDeduction)}</span></div>
                           <div className="flex justify-between font-semibold"><span>Expected amount you’ll receive</span><span>{currency(expectedTakeHome)}</span></div>
                         </div>
-                      )}
+                      ) : null}
 
                       <div className="mt-4 text-xs text-gray-600">
                         <p>Bank: {bankName || "__________"}</p>
@@ -588,7 +567,6 @@
                     </div>
                   </div>
 
-                  {/* Buttons under invoice (won't print) */}
                   <div className="mt-3 flex gap-3">
                     <button className="px-4 py-2 rounded-lg bg-blue-600 text-white" onClick={()=>window.print()}>
                       Download / Print
@@ -600,7 +578,7 @@
                 </div>
               </div>
             </div>
-          )}
+          ) : null}
         </div>
       );
     }
