--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- TailwindCSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
+  <!-- html2pdf for client-side PDF -->
+  <script src="https://cdn.jsdelivr.net/npm/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
+
   <style>
     :root{
       --sbx-blue:#2563eb;
@@ -31,22 +34,12 @@
       background: var(--sbx-bg);
     }
     .step-dot { height:8px; width:8px; border-radius:9999px; }
-
-    /* Buttons */
-    .sbx-btn {
-      background-color: var(--sbx-blue);
-      color: #fff;
-      transition: background-color .2s ease;
-    }
+    .sbx-btn { background-color: var(--sbx-blue); color:#fff; transition: background-color .2s ease; }
     .sbx-btn:hover { background-color: var(--sbx-blue-hover); }
-    .sbx-btn-dark {
-      background-color: var(--sbx-ink);
-      color:#fff;
-      transition: background-color .2s ease;
-    }
+    .sbx-btn-dark { background-color: var(--sbx-ink); color:#fff; transition: background-color .2s ease; }
     .sbx-btn-dark:hover { background-color:#000; }
 
-    /* Print only the invoice preview */
+    /* Print: only invoice preview prints if user uses window.print */
     @media print {
       body * { visibility: hidden !important; }
       #printable, #printable * { visibility: visible !important; }
@@ -135,13 +128,13 @@
       const chargeVat = youVat && !drcApplies;                              // Only charge VAT if you’re VAT-registered and DRC doesn’t apply
 
       const subtotal = labourVal + materialsVal + otherVal;
-      const vatAmount = chargeVat ? subtotal * VAT_RATE : 0;
+      const vatAmount = chargeVat ? subtotal * 0.2 : 0;
       const totalToInvoice = subtotal + vatAmount;
 
       const cisRate = React.useMemo(()=> cisStatus==="gross" ? 0 : (cisStatus==="net30" ? 0.30 : 0.20), [cisStatus]);
       const cisDeduction = withinCIS ? (labourVal * cisRate) : 0;
       const expectedTakeHome = totalToInvoice - cisDeduction;
-      const drcCustomerVatInfo = drcApplies ? subtotal * VAT_RATE : 0;
+      const drcCustomerVatInfo = drcApplies ? subtotal * 0.2 : 0;
 
       const reset = () => {
         setStep(1);
@@ -179,60 +172,24 @@
         "Waste Removal / Skip","Other…"
       ];
 
-      // Email invoice helper
-      const emailInvoice = () => {
-        const lines = [];
-        const job = (showJobOnInvoice && (jobType==="Other…" ? jobTypeOther.trim() : jobType))
-          ? `${(jobType==="Other…" ? jobTypeOther.trim() : jobType)} works`
-          : "";
+      // Generate PDF of the invoice preview
+      const downloadPDF = async () => {
+        const el = document.getElementById('printable');
+        const fileName = `Invoice-${(invNo || '').replace(/[^A-Za-z0-9-_]/g,'') || 'SBX'}.pdf`;
+        const opt = {
+          margin:       [10,10,10,10],  // mm
+          filename:     fileName,
+          image:        { type: 'jpeg', quality: 0.98 },
+          html2canvas:  { scale: 2, useCORS: true, letterRendering: true },
+          jsPDF:        { unit: 'mm', format: 'a4', orientation: 'portrait' }
+        };
+        await html2pdf().set(opt).from(el).save();
+      };
 
-        lines.push(`INVOICE ${invNo || ""}`);
-        if (job) lines.push(job);
-        lines.push(`Date: ${invDate || ""}`);
-        lines.push("");
-        lines.push("Billed to:");
-        lines.push(`${billTo}`);
-        if (siteAddr1) lines.push(siteAddr1);
-        if (siteAddr2) lines.push(siteAddr2);
-        if (siteCity || sitePost) lines.push(`${siteCity} ${sitePost}`.trim());
-        lines.push("");
-        lines.push("From:");
-        lines.push(`${fromName}`);
-        if (fromAddr1) lines.push(fromAddr1);
-        if (fromAddr2) lines.push(fromAddr2);
-        if (fromCity || fromPost) lines.push(`${fromCity} ${fromPost}`.trim());
-        if (youVat && (fromVat || "GB…")) lines.push(`VAT Reg: ${fromVat || "GB…"}`);
-        if (withinCIS) lines.push(`CIS Status: ${cisStatus === "gross" ? "Gross (0%)" : cisStatus === "net30" ? "Unverified (30%)" : "Registered (20%)"}`);
-        lines.push("");
-
-        if (labourVal>0) lines.push(`Labour (ex VAT)\t${currency(labourVal)}`);
-        if (materialsVal>0) lines.push(`Materials & consumables (ex VAT)\t${currency(materialsVal)}`);
-        if (otherVal>0) lines.push(`Other (ex VAT)\t${currency(otherVal)}`);
-        lines.push(`Subtotal\t${currency(subtotal)}`);
-        if (chargeVat) lines.push(`VAT @ 20%\t${currency(vatAmount)}`);
-        lines.push(`Total to invoice\t${currency(totalToInvoice)}`);
-        if (withinCIS && cisRate>0) lines.push(`CIS deduction (${Math.round(cisRate*100)}%)\t- ${currency(cisDeduction)}`);
-        if (withinCIS) lines.push(`Expected amount you’ll receive\t${currency(expectedTakeHome)}`);
-
-        lines.push("");
-        lines.push(
-          !withinCIS
-            ? "Note: Work outside CIS. Reverse charge never applies. VAT is charged only if the supplier is VAT-registered."
-            : (!youVat
-                ? "Note: Supplier not VAT-registered — no VAT charged."
-                : (drcApplies
-                    ? "Note: Domestic Reverse Charge applies. Customer to account for VAT to HMRC."
-                    : "Note: VAT charged at the prevailing rate."))
-        );
-
-        lines.push("");
-        lines.push("Payment details:");
-        lines.push(`Bank: ${bankName || ""}`);
-        lines.push(`Account: ${bankAcc || ""}   Sort Code: ${bankSort || ""}`);
-        if (payRef) lines.push(`Payment reference: ${payRef}`);
-
+      // Open a short email draft (user attaches PDF they just downloaded)
+      const openEmailDraft = () => {
         const subject = `Invoice ${invNo || ""} from ${fromName || "Subcontractor"}`.trim();
-        const body = lines.join("\n");
+        const body = `Hi,\n\nPlease find attached invoice ${invNo || ""} dated ${invDate || ""}.\n\nRegards,\n${fromName || ""}`;
         const mailto = `mailto:?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
         window.location.href = mailto;
       };
@@ -376,10 +333,9 @@
             </div>
           ) : null}
 
-          {/* Step 3 — Results row (3 cards), then 2 columns below */}
+          {/* Step 3 — Results row, then Inputs + Invoice */}
           {step===3 ? (
             <div className="space-y-8">
-              {/* 3 compact result cards */}
               <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div className="bg-white rounded-2xl shadow p-5 border border-gray-100">
                   <h3 className="font-semibold mb-3">Figures</h3>
@@ -389,7 +345,7 @@
                     <div className="flex justify-between"><span>Other (ex VAT)</span><span>{currency(otherVal)}</span></div>
                     <div className="border-t my-2"></div>
                     <div className="flex justify-between font-medium"><span>Subtotal</span><span>{currency(subtotal)}</span></div>
-                    { (youVat && !drcApplies) ? (
+                    {(youVat && !drcApplies) ? (
                       <div className="flex justify-between"><span>VAT @ 20%</span><span>{currency(vatAmount)}</span></div>
                     ) : null}
                     <div className="flex justify-between font-semibold"><span>Total to invoice</span><span>{currency(totalToInvoice)}</span></div>
@@ -445,7 +401,7 @@
                     <button className="px-3 py-2 rounded-lg bg-white border border-gray-200" onClick={copyLines}>Copy invoice lines</button>
                   </div>
                   <div className="text-xs text-gray-500 mt-3">
-                    The full invoice is on the right; print or email from there.
+                    Download the PDF below, then attach it to your email.
                   </div>
                 </div>
               </div>
@@ -567,7 +523,7 @@
                             <td className="py-2 font-medium">Subtotal</td>
                             <td className="text-right py-2 font-medium">{currency(subtotal)}</td>
                           </tr>
-                          { (youVat && !drcApplies) ? (
+                          {(youVat && !drcApplies) ? (
                             <tr className="border-b">
                               <td className="py-2">VAT @ 20%</td>
                               <td className="text-right py-2">{currency(vatAmount)}</td>
@@ -607,10 +563,12 @@
                     </div>
                   </div>
 
-                  <div className="mt-3 flex gap-3">
-                    <button className="px-4 py-2 rounded-lg sbx-btn" onClick={()=>window.print()}>Download / Print</button>
-                    <button className="px-4 py-2 rounded-lg sbx-btn-dark" onClick={emailInvoice}>Email invoice</button>
+                  <div className="mt-3 flex flex-wrap gap-3">
+                    <button className="px-4 py-2 rounded-lg sbx-btn" onClick={downloadPDF}>Download PDF</button>
+                    <button className="px-4 py-2 rounded-lg bg-white border border-gray-200" onClick={()=>window.print()}>Print</button>
+                    <button className="px-4 py-2 rounded-lg sbx-btn-dark" onClick={openEmailDraft}>Open email draft</button>
                   </div>
+                  <p className="text-xs text-gray-500 mt-2">Attach the downloaded PDF to your email.</p>
                 </div>
               </div>
             </div>
