--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CIS Smart Invoicing & Deduction Checker</title>
+  <title>SBX CIS Smart Invoicing & Deduction Checker</title>
 
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -34,16 +34,41 @@
       background: var(--sbx-bg);
     }
     .step-dot { height:8px; width:8px; border-radius:9999px; }
-    .sbx-btn { background-color: var(--sbx-blue); color:#fff; transition: background-color .2s ease; }
+
+    /* Buttons */
+    .sbx-btn {
+      background-color: var(--sbx-blue);
+      color:#fff;
+      transition: background-color .2s ease;
+    }
     .sbx-btn:hover { background-color: var(--sbx-blue-hover); }
-    .sbx-btn-dark { background-color: var(--sbx-ink); color:#fff; transition: background-color .2s ease; }
+    .sbx-btn-dark {
+      background-color: var(--sbx-ink);
+      color:#fff;
+      transition: background-color .2s ease;
+    }
     .sbx-btn-dark:hover { background-color:#000; }
 
-    /* Print: only invoice preview prints if user uses window.print */
+    /* A4 sheet sizing used for BOTH print and PDF (210mm x 297mm) */
+    .a4-sheet {
+      width: 190mm;            /* content width inside margins */
+      background:#ffffff;
+      margin: 0 auto;
+      box-shadow: none;        /* no shadows in output */
+      page-break-inside: avoid;
+    }
+    .no-break { page-break-inside: avoid; }
+
+    /* PRINT: print ONLY the sheet; lock to A4 and avoid extra page */
     @media print {
+      @page { size: A4; margin: 12mm; }
+      html, body { height: auto !important; }
       body * { visibility: hidden !important; }
       #printable, #printable * { visibility: visible !important; }
-      #printable { position: absolute; left: 0; top: 0; width: 100%; padding: 0 !important; margin: 0 !important; box-shadow: none !important; }
+      #printable { position: absolute; left: 0; top: 0; width: 100%; }
+      /* Ensure one page by avoiding accidental page breaks */
+      #invoice-sheet { page-break-after: avoid; page-break-before: avoid; }
+      table, tr, td, th { page-break-inside: avoid !important; }
     }
   </style>
 </head>
@@ -59,8 +84,6 @@
       const n = parseFloat(String(v || "").replace(/,/g, ""));
       return isFinite(n) ? Math.max(0, n) : 0;
     };
-
-    const VAT_RATE = 0.2;
 
     const Badge = ({children}) => (
       <span className="inline-flex items-center rounded-full bg-blue-50 px-3 py-1 text-xs font-semibold text-blue-700 ring-1 ring-inset ring-blue-200">
@@ -124,8 +147,8 @@
       const otherVal = React.useMemo(()=>clampMoney(other), [other]);
 
       // Rules
-      const drcApplies = withinCIS && youVat && customerVat && !endUser;   // DRC only possible within CIS
-      const chargeVat = youVat && !drcApplies;                              // Only charge VAT if you’re VAT-registered and DRC doesn’t apply
+      const drcApplies = withinCIS && youVat && customerVat && !endUser; // DRC only possible within CIS
+      const chargeVat = youVat && !drcApplies;                           // Only charge VAT if VAT-registered and DRC doesn't apply
 
       const subtotal = labourVal + materialsVal + otherVal;
       const vatAmount = chargeVat ? subtotal * 0.2 : 0;
@@ -172,16 +195,39 @@
         "Waste Removal / Skip","Other…"
       ];
 
-      // Generate PDF of the invoice preview
+      // ==== AUTO-RESIZE: post height to parent (Duda) on load, changes & step switches ====
+      const sendHeight = React.useCallback(() => {
+        const h = document.documentElement.scrollHeight || document.body.scrollHeight;
+        window.parent?.postMessage({ type: 'SBX_IFRAME_HEIGHT', height: h }, '*');
+      }, []);
+      React.useEffect(() => {
+        const ro = new ResizeObserver(sendHeight);
+        ro.observe(document.body);
+        window.addEventListener('load', sendHeight);
+        const t = setInterval(sendHeight, 1000);
+        const onMsg = (e)=>{ if(e.data && e.data.type==='SBX_REQUEST_HEIGHT') sendHeight(); };
+        window.addEventListener('message', onMsg);
+        return () => { ro.disconnect(); clearInterval(t); window.removeEventListener('load', sendHeight); window.removeEventListener('message', onMsg); };
+      }, [sendHeight]);
+      React.useEffect(() => { sendHeight(); }, [step, sendHeight]);
+
+      // ==== PDF: render the fixed-width A4 sheet only ====
       const downloadPDF = async () => {
-        const el = document.getElementById('printable');
+        const el = document.getElementById('invoice-sheet'); // << render the sheet only
+        if (!el) return;
         const fileName = `Invoice-${(invNo || '').replace(/[^A-Za-z0-9-_]/g,'') || 'SBX'}.pdf`;
         const opt = {
-          margin:       [10,10,10,10],  // mm
+          margin:       12, // mm (matches @page margin)
           filename:     fileName,
           image:        { type: 'jpeg', quality: 0.98 },
-          html2canvas:  { scale: 2, useCORS: true, letterRendering: true },
-          jsPDF:        { unit: 'mm', format: 'a4', orientation: 'portrait' }
+          html2canvas:  {
+            scale: 2,
+            useCORS: true,
+            backgroundColor: '#ffffff',
+            windowWidth: el.scrollWidth, // ensure correct layout width
+          },
+          jsPDF:        { unit: 'mm', format: 'a4', orientation: 'portrait' },
+          pagebreak:    { mode: ['avoid-all','css','legacy'] }
         };
         await html2pdf().set(opt).from(el).save();
       };
@@ -458,109 +504,123 @@
                   <div className="bg-white rounded-2xl shadow p-6 border border-gray-100" id="printable">
                     <h2 className="text-lg font-semibold mb-3">Invoice</h2>
 
-                    <div className="rounded-2xl border border-gray-200 p-6 bg-white">
-                      <div className="flex items-start justify-between mb-4">
-                        <div>
-                          <h3 className="text-lg font-semibold">INVOICE</h3>
-                          {showJobOnInvoice && (jobType==="Other…" ? jobTypeOther.trim() : jobType) ? (
-                            <p className="text-xs text-gray-500">{(jobType==="Other…" ? jobTypeOther.trim() : jobType)} works</p>
-                          ) : null}
+                    <!-- The fixed-width A4 sheet used for print/PDF -->
+                    <div id="invoice-sheet" className="a4-sheet">
+                      <div className="p-6">
+                        <div className="flex items-start justify-between mb-4">
+                          <div>
+                            <h3 className="text-lg font-semibold">INVOICE</h3>
+                            {showJobOnInvoice && (jobType==="Other…" ? jobTypeOther.trim() : jobType) ? (
+                              <p className="text-xs text-gray-500">{(jobType==="Other…" ? jobTypeOther.trim() : jobType)} works</p>
+                            ) : null}
+                          </div>
+                          <div className="text-right text-xs text-gray-500">
+                            <p>Date: {today && (document.getElementById ? '' : '')}{/* keep react happy */}{/* value below */}{/*  */}{/*  */}{/*  */}</p>
+                            <p>Date: {/**/}{/* replaced next line actually */}</p>
+                            <div className="text-right text-xs text-gray-500">
+                              <p>Date: {/**/}{/* real value below */}{/*  */}</p>
+                            </div>
+                          </div>
                         </div>
-                        <div className="text-right text-xs text-gray-500">
-                          <p>Date: {invDate || "__________"}</p>
-                          <p>Invoice #: {invNo || "__________"}</p>
-                        </div>
-                      </div>
 
-                      <div className="mb-4 grid grid-cols-2 gap-4 text-xs">
-                        <div>
-                          <p className="font-semibold">Billed to</p>
-                          <p>{billTo}</p>
-                          <p>{siteAddr1}</p>
-                          <p>{siteAddr2}</p>
-                          <p>{siteCity} {sitePost}</p>
+                        {/* Header info (clean version without duplications) */}
+                        <div className="mb-4 grid grid-cols-2 gap-4 text-xs">
+                          <div>
+                            <p className="font-semibold">Billed to</p>
+                            <p>{billTo}</p>
+                            <p>{siteAddr1}</p>
+                            <p>{siteAddr2}</p>
+                            <p>{siteCity} {sitePost}</p>
+                          </div>
+                          <div className="text-right">
+                            <p className="font-semibold">From</p>
+                            <p>{fromName}</p>
+                            <p>{fromAddr1}</p>
+                            <p>{fromAddr2}</p>
+                            <p>{fromCity} {fromPost}</p>
+                            {youVat ? <p>VAT Reg: {fromVat || "GB…"}</p> : null}
+                            {withinCIS ? (
+                              <p>CIS Status: {cisStatus === "gross" ? "Gross (0%)" : cisStatus === "net30" ? "Unverified (30%)" : "Registered (20%)"}</p>
+                            ) : null}
+                          </div>
                         </div>
-                        <div className="text-right">
-                          <p className="font-semibold">From</p>
-                          <p>{fromName}</p>
-                          <p>{fromAddr1}</p>
-                          <p>{fromAddr2}</p>
-                          <p>{fromCity} {fromPost}</p>
-                          {youVat ? <p>VAT Reg: {fromVat || "GB…"}</p> : null}
-                          {withinCIS ? (
-                            <p>CIS Status: {cisStatus === "gross" ? "Gross (0%)" : cisStatus === "net30" ? "Unverified (30%)" : "Registered (20%)"}</p>
-                          ) : null}
-                        </div>
-                      </div>
 
-                      <table className="w-full text-sm">
-                        <thead>
-                          <tr className="border-b">
-                            <th className="text-left py-2">Description</th>
-                            <th className="text-right py-2">Amount (ex VAT)</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          {labourVal>0 ? (
+                        {/* Meta row (date + invoice #) */}
+                        <div className="text-xs text-gray-500 mb-2 flex justify-between">
+                          <span>Date: {invDate || "__________"}</span>
+                          <span>Invoice #: {invNo || "__________"}</span>
+                        </div>
+
+                        <table className="w-full text-sm no-break">
+                          <thead>
                             <tr className="border-b">
-                              <td className="py-2">Labour</td>
-                              <td className="text-right py-2">{currency(labourVal)}</td>
+                              <th className="text-left py-2">Description</th>
+                              <th className="text-right py-2">Amount (ex VAT)</th>
                             </tr>
-                          ) : null}
-                          {materialsVal>0 ? (
+                          </thead>
+                          <tbody>
+                            {labourVal>0 ? (
+                              <tr className="border-b">
+                                <td className="py-2">Labour</td>
+                                <td className="text-right py-2">{currency(labourVal)}</td>
+                              </tr>
+                            ) : null}
+                            {materialsVal>0 ? (
+                              <tr className="border-b">
+                                <td className="py-2">Materials & consumables</td>
+                                <td className="text-right py-2">{currency(materialsVal)}</td>
+                              </tr>
+                            ) : null}
+                            {otherVal>0 ? (
+                              <tr className="border-b">
+                                <td className="py-2">Other charges</td>
+                                <td className="text-right py-2">{currency(otherVal)}</td>
+                              </tr>
+                            ) : null}
                             <tr className="border-b">
-                              <td className="py-2">Materials & consumables</td>
-                              <td className="text-right py-2">{currency(materialsVal)}</td>
+                              <td className="py-2 font-medium">Subtotal</td>
+                              <td className="text-right py-2 font-medium">{currency(subtotal)}</td>
                             </tr>
-                          ) : null}
-                          {otherVal>0 ? (
-                            <tr className="border-b">
-                              <td className="py-2">Other charges</td>
-                              <td className="text-right py-2">{currency(otherVal)}</td>
+                            {(youVat && !drcApplies) ? (
+                              <tr className="border-b">
+                                <td className="py-2">VAT @ 20%</td>
+                                <td className="text-right py-2">{currency(vatAmount)}</td>
+                              </tr>
+                            ) : null}
+                            <tr>
+                              <td className="py-2 font-semibold">Total to invoice</td>
+                              <td className="text-right py-2 font-semibold">{currency(totalToInvoice)}</td>
                             </tr>
-                          ) : null}
-                          <tr className="border-b">
-                            <td className="py-2 font-medium">Subtotal</td>
-                            <td className="text-right py-2 font-medium">{currency(subtotal)}</td>
-                          </tr>
-                          {(youVat && !drcApplies) ? (
-                            <tr className="border-b">
-                              <td className="py-2">VAT @ 20%</td>
-                              <td className="text-right py-2">{currency(vatAmount)}</td>
-                            </tr>
-                          ) : null}
-                          <tr>
-                            <td className="py-2 font-semibold">Total to invoice</td>
-                            <td className="text-right py-2 font-semibold">{currency(totalToInvoice)}</td>
-                          </tr>
-                        </tbody>
-                      </table>
+                          </tbody>
+                        </table>
 
-                      <div className="mt-4 text-xs">
-                        {!withinCIS
-                          ? <p className="italic">Work outside CIS. Reverse charge never applies. VAT depends only on supplier’s VAT status.</p>
-                          : (!youVat
-                              ? <p className="italic">Supplier not VAT-registered — no VAT charged.</p>
-                              : (drcApplies
-                                  ? <p className="italic">Domestic Reverse Charge applies. Customer to account for VAT to HMRC.</p>
-                                  : <p className="italic">VAT charged at the prevailing rate.</p>
-                                )
-                            )
-                        }
-                      </div>
-
-                      {withinCIS ? (
-                        <div className="mt-4 rounded-xl bg-slate-50 p-3 text-xs">
-                          <div className="flex justify-between"><span>CIS deduction on labour {cisRate>0?`(${Math.round(cisRate*100)}%)`:""}</span><span>- {currency(cisDeduction)}</span></div>
-                          <div className="flex justify-between font-semibold"><span>Expected amount you’ll receive</span><span>{currency(expectedTakeHome)}</span></div>
+                        <div className="mt-4 text-xs">
+                          {!withinCIS
+                            ? <p className="italic">Work outside CIS. Reverse charge never applies. VAT depends only on supplier’s VAT status.</p>
+                            : (!youVat
+                                ? <p className="italic">Supplier not VAT-registered — no VAT charged.</p>
+                                : (drcApplies
+                                    ? <p className="italic">Domestic Reverse Charge applies. Customer to account for VAT to HMRC.</p>
+                                    : <p className="italic">VAT charged at the prevailing rate.</p>
+                                  )
+                              )
+                          }
                         </div>
-                      ) : null}
 
-                      <div className="mt-4 text-xs text-gray-600">
-                        <p>Bank: {bankName || "__________"}</p>
-                        <p>Account: {bankAcc || "__________"} &nbsp; Sort Code: {bankSort || "______"} &nbsp; Ref: {payRef || "Invoice #"}</p>
+                        {withinCIS ? (
+                          <div className="mt-4 rounded-xl bg-slate-50 p-3 text-xs no-break">
+                            <div className="flex justify-between"><span>CIS deduction on labour {cisRate>0?`(${Math.round(cisRate*100)}%)`:""}</span><span>- {currency(cisDeduction)}</span></div>
+                            <div className="flex justify-between font-semibold"><span>Expected amount you’ll receive</span><span>{currency(expectedTakeHome)}</span></div>
+                          </div>
+                        ) : null}
+
+                        <div className="mt-4 text-xs text-gray-600">
+                          <p>Bank: {bankName || "__________"}</p>
+                          <p>Account: {bankAcc || "__________"} &nbsp; Sort Code: {bankSort || "______"} &nbsp; Ref: {payRef || "Invoice #"}</p>
+                        </div>
                       </div>
                     </div>
+                    <!-- /#invoice-sheet -->
                   </div>
 
                   <div className="mt-3 flex flex-wrap gap-3">
